chore(demo): fix flickering (#4911)

--- a/projects/demo/src/modules/components/island/examples/3/index.less
+++ b/projects/demo/src/modules/components/island/examples/3/index.less
@@ -45,9 +45,9 @@
         border-radius-right-bottom: 0;
         border-bottom-right-radius: 0;
         border-bottom-left-radius: 0;
+    }
 
-        &:hover {
-            transform: translateY(-1.6rem);
-        }
+    &:hover [tuiaction] {
+        transform: translateY(-1.6rem);
     }
 }
